--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   intl: ^0.20.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  share_plus: ^10.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
