--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
   share_plus: ^10.1.3
-  flutter_dotenv: ^5.2.1
-  dio: ^5.7.0
+  # flutter_dotenv: ^5.2.1
+  # dio: ^5.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -25,7 +25,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - .env
     - assets/
     - assets/fonts/
   fonts:
